--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title> Global App Initiative</title>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/stylemain.css" />
+  <link rel="stylesheet" href="/css/global.css" />
 </head>
 <body>
   <!-- Header, e.g. bootstrap version -->
