added mission and e-board body sections to about page

--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" type="text/css" href="css/about.css">
 </head>
 <body>
-    <div class="container-fluid" id="mission">
+    <div class="container-fluid about_body" id="mission">
         <h2>Our Mission</h2>
-        <p>
+        <p class="about_body_text" id="mission-text">
             Global App Initiative integrates humanity and technology to create a
             program that trains students to become mobile-app developers for nonprofits.
             Never losing sight of the bigger picture, we recruit students of all fashions
@@ -18,8 +18,26 @@
             environmentally sound world.
         </p>
     </div>
-    <div class="container-fluid" id="video">
-
+    <div class="container-fluid" id="stats">
+        <svg width="500" height="150">
+            <rect height="130" width="450">
+            </rect>
+        </svg>
+    </div>
+    <div class="img-responsive" id="about_video">
+        <img src="img/gai-video.jpg" alt="About GAI Video">
+    </div>
+    <div class="container-fluid about_body">
+        <h2>Our E-Board</h2>
+        <p class="about_body_text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce luctus purus
+            vitae arcu venenatis sagittis. Vivamus justo sem, sollicitudin eget neque eget,
+            imperdiet molestie tortor. Quisque tristique iaculis nisl, ut blandit augue hendrerit
+            vitae. Pellentesque interdum nisl nibh, et varius.
+        </p>
+    </div>
+    <div class="footer">
+        <!-- Footer code here-->
     </div>
 </body>
 </html>
