some header footer dev stuff

--- a/about.html
+++ b/about.html
@@ -36,6 +36,44 @@
             vitae. Pellentesque interdum nisl nibh, et varius.
         </p>
     </div>
+
+    <div class="container-fluid" id="stats">
+        <svg width="500" height="150">
+            <rect height="130" width="450">
+            </rect>
+        </svg>
+    </div>
+    <div class="img-responsive" id="about_video">
+        <img src="img/gai-video.jpg" alt="About GAI Video">
+    </div>
+    <div class="container-fluid about_body">
+        <h2>Our E-Board</h2>
+        <p class="about_body_text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce luctus purus
+            vitae arcu venenatis sagittis. Vivamus justo sem, sollicitudin eget neque eget,
+            imperdiet molestie tortor. Quisque tristique iaculis nisl, ut blandit augue hendrerit
+            vitae. Pellentesque interdum nisl nibh, et varius.
+        </p>
+    </div>
+
+    <div class="container-fluid" id="stats">
+        <svg width="500" height="150">
+            <rect height="130" width="450">
+            </rect>
+        </svg>
+    </div>
+    <div class="img-responsive" id="about_video">
+        <img src="img/gai-video.jpg" alt="About GAI Video">
+    </div>
+    <div class="container-fluid about_body">
+        <h2>Our E-Board</h2>
+        <p class="about_body_text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce luctus purus
+            vitae arcu venenatis sagittis. Vivamus justo sem, sollicitudin eget neque eget,
+            imperdiet molestie tortor. Quisque tristique iaculis nisl, ut blandit augue hendrerit
+            vitae. Pellentesque interdum nisl nibh, et varius.
+        </p>
+    </div>
     <div class="footer">
         <!-- Footer code here-->
     </div>
