--- a/index.html
+++ b/index.html
@@ -1,27 +1,93 @@
-<!doctype HTML>
-<link rel="icon" href="/img/favicon.png" type="image/x-icon" />
-<html class="no-js" lang="en">
+<!DOCTYPE HTML>
+<!-- <link rel="icon" href="/img/favicon.png" type="image/x-icon" /> -->
+<html lang="en"> <!-- class="no-js" -->
 <head>
   <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="">
+  <meta name="author" content="">
+
   <title> Global App Initiative</title>
+
+  <!-- Bootstrap -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/global.css" />
+
+  <!-- Custom Global CSS -->
+  <!-- <link rel="stylesheet" href="css/global.css" /> -->
+
+  <!-- Page CSS -->
+  <link rel="stylesheet" href="css/index.css">
+
+  <!-- Custom Fonts -->
+  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+
 </head>
-<body>
+<body id="page-top" class="index">
   <!-- Header, e.g. bootstrap version -->
   <nav class="navbar navbar-default navbar-static-top">
-    <div>
-      Put things like a navbar here!
+    <div class = "container">
+      
+      <div class="navbar-header page-scroll">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand page-scroll" href="#page-top">Global App Initiative</a>
+      </div>
+
+
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="hidden">
+            <a href="#page-top"></a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#services">Services</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#portfolio">Portfolio</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#about">About</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#team">Team</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
     </div>    
   </nav>
+
+  <!-- Header -->
+  <header>
+    <div class="container">
+      <div class="intro-text">
+        <div class="intro-lead-in">Welcome To Our Studio!</div>
+        <div class="intro-heading">It's Nice To Meet You</div>
+        <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+      </div>
+    </div>
+  </header>
+
   <!-- main body-->
   <div>
     Put things like the actual home page here!<br>Look, a rotating logo!<br>
     <img src="/img/GAI_gif_blue_b.gif">
   </div>
+
   <div>
     Put things like the consistent footer here!
   </div>
+
 </body>
 </html>
