--- a/header-footer.html
+++ b/header-footer.html
@@ -47,15 +47,6 @@
             </ul>
           </li> -->
         </ul>
-        
-        <ul class="nav navbar-nav navbar-right">
-          <form class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button
-          </li>
-        </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
@@ -66,16 +57,67 @@
     Put things like the actual home page here!<br>Look, a rotating logo!<br>
     <img src="/img/GAI_gif_blue_b.gif">
   </div>
-  
-  <div class="container-fluid" id="stats">
-    <svg width="500" height="150">
-      <rect height="130" width="450">
-      </rect>
-    </svg>
-  </div>
 
   <!-- Site footer -->
-  <div class="bottom">
+  <div class="navbar navbar-fixed-bottom">
+    <!-- Desktop footer, longer -->
+    <div class="container">
+      <ul class="footer-lists">
+        <ul>
+          <li><a href="/about">About</a></li>
+          <li><a href="/blog">Blog</a></li>
+          <li><a href="/sponsors">Sponsors</a></li>
+          <li><a href="/press">Press</a></li>
+        </ul>
+        <ul>
+          <li><a href="/projects/">Projects</a></li>
+          <li><a href="/projects/2013/">2013</a></li>
+          <li><a href="/projects/2014/">2014</a></li>
+        </ul>
+         <ul>
+          <li><a href="/education">Education</a></li>
+          <li><a href="/summer-leadership-program">Summer Leadership Program</a></li>
+          <li><a href="/job-board">Job Board</a></li>
+        </ul>
+        <ul>
+          <li><a href="/team">Team</a></li>
+          <li><a href="/team/current">Current EBoard</a></li>
+          <li><a href="/former-teams">Former Members</a></li>
+        </ul>
+        <ul>
+          <li><a href="/contact">Contact</a></li>
+          <li><a href="/students">Students</a></li>
+          <li><a href="/non-profits">Non-Profits</a></li>
+          <li><a href="/university">College or University</a></li>
+        </ul>
+        <ul>
+          <li>Social</li>
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Twitter</a></li>
+          <li><a href="#">YouTube</a></li>
+          <li><a href="#">GitHub</a></li>
+          <li><a href="#">Google+</a></li>
+        </ul>
+      </ul>
+    </div>
+    <hr>
+    <div class="container">
+      <p style="color:#B3B3B3">Global App Initiative, Boston University</p>
+
+      <!-- if we can actually implement a search functionality -->
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+          <form class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Search">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+          </form>
+        </li>
+      </ul>
+
+    </div>
+    <!-- 
     <div class="container">
       <div class="col-md-4">
         <p class="white-text">Content for the first footer section.</p>
@@ -87,19 +129,19 @@
         <p class="white-text">Content for the third footer section.</p>
       </div>
       <div class="col-md-4">
-        <p class="white-text">Content for the third footer section.</p>
+        <p class="white-text">Content for the fourth footer section.</p>
       </div>
       <div class="col-md-4">
-        <p class="white-text">Content for the third footer section.</p>
+        <p class="white-text">Content for the fifth footer section.</p>
       </div>
       <div class="col-md-4">
-        <p class="white-text">Content for the third footer section.</p>
+        <p class="white-text">Content for the sixth footer section.</p>
       </div>
       <div class="col-md-4">
-        <p class="white-text">Content for the third footer section.</p>
+        <p class="white-text">Content for the seventh footer section.</p>
       </div>
-    </div>
-  </div>
+    </div> -->
 
+  </div>
 </body>
 </html>
