getting website structure up

--- a/about/index.html
+++ b/about/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Global App Initiative</title>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/about.css">
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/about.css">
 </head>
 <body>
     <div class="container-fluid about_body" id="mission">
@@ -34,8 +34,8 @@
             </li>
         </ul>
     </div>
-    <div class="img-responsive" id="about_video">
-        <img src="img/gai-video.jpg" alt="About GAI Video">
+    <div class="/img-responsive" id="about_video">
+        <img src="/img/gai-video.jpg" alt="About GAI Video">
     </div>
     <div class="container-fluid about_body">
         <h2>Our E-Board</h2>
