--- a/projects/index.html
+++ b/projects/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- Header, e.g. bootstrap version -->
   <nav class="navbar navbar-default navbar-fixed-top">
-    <a class="logotopleft" href="/"><img src="/img/GAI_gif_white.gif"></a>
+    <a class="navbar-brand" href="/"><img style="height:auto; width:auto; max-width:60px; max-height:60px;"src="/img/GAI_gif_white.gif"></a>
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
@@ -30,10 +30,10 @@
           <!-- <li class="active"><a href="#">About<span class="sr-only">(current)</span></a></li> -->
           <li><a href="/about/">About</a></li>
           <li><a href="/projects/">Projects</a></li>
-          <li><a href="/educaiton/">Education</a></li>
-          <li><a href="/press/">Press</a></li>
-          <li><a href="/contact/">Contact</a></li>
-          <li><a href="/join/">Join</a></li>
+          <li><a href="#">Education</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Join</a></li>
           <!-- <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
