--- a/header-footer.html
+++ b/header-footer.html
@@ -4,144 +4,114 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content=""/>
+  <meta name="author" content=""/>
   <title> Global App Initiative</title>
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+  <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="/css/global.css" />
+  <!-- <script src="/js/bootstrap.min.js"/> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <!-- Header, e.g. bootstrap version -->
-  <nav class="navbar navbar-default navbar-fixed-top">
-    <a class="logotopleft" href="/"><img src="/img/GAI_gif_white.gif"></a>
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      
-    </div>
+  
+  <!-- ############################################################ -->
+  <!-- Header -->
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <!-- <nav class="navbar navbar-default" role="navigation"> -->
     <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="logotopleft" href="/"><img src="/img/GAI_gif_white.gif"></a>
+      </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <!-- <li class="active"><a href="#">About<span class="sr-only">(current)</span></a></li> -->
+          <!-- <li class="nav-active"><a href="/about/">About</a></li> -->
           <li><a href="/about/">About</a></li>
           <li><a href="/projects/">Projects</a></li>
-          <li><a href="/educaiton/">Education</a></li>
-          <li><a href="/press/">Press</a></li>
+          <li><a href="/education/">Education</a></li>
+          <li><a href="/events/">Events</a></li>
           <li><a href="/contact/">Contact</a></li>
           <li><a href="/join/">Join</a></li>
-          <!-- <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
-            </ul>
-          </li> -->
         </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+      </div>
+    </div>
   </nav>
 
-  </nav>
   <!-- main body-->
-  <div class="container-fluid">
+
+  <div class="container" style="background-color:#FFFFFF">
     Put things like the actual home page here!<br>Look, a rotating logo!<br>
     <img src="/img/GAI_gif_blue_b.gif">
   </div>
 
+
   <!-- Site footer -->
-  <div class="navbar navbar-fixed-bottom">
-    <!-- Desktop footer, longer -->
-    <div class="container">
-      <ul class="footer-lists">
-        <ul>
-          <li><a href="/about">About</a></li>
-          <li><a href="/blog">Blog</a></li>
-          <li><a href="/sponsors">Sponsors</a></li>
-          <li><a href="/press">Press</a></li>
+  <!-- <div class="navbar navbar-fixed-bottom"> -->
+  <div class="navbar">
+    <div class="footer">
+      <div class="container">
+        <ul class="footer-lists">
+          <ul>
+            <li class="footer-top"><a href="/about/">About</a></li>
+            <li><a href="https://medium.com/@GlobalAppsBU">Blog</a></li>
+            <li><a href="/sponsors/">Sponsors</a></li>
+            <li><a href="/press/">Press</a></li>
+          </ul>
+          <ul>
+            <li><a href="/projects/">Projects</a></li>
+            <li><a href="/projects/2013/">2013</a></li>
+            <li><a href="/projects/2014/">2014</a></li>
+            <li><a href="/projects/2015/">2015</a></li>
+          </ul>
+           <ul>
+            <li><a href="/education/">Education</a></li>
+            <li><a href="/summer-leadership-program/">Summer Leadership Program</a></li>
+            <li><a href="/job-board/">Job Board</a></li>
+          </ul>
+          <ul>
+            <li><a href="/team/">Team</a></li>
+            <li><a href="/team/current/">Current EBoard</a></li>
+            <li><a href="/team/former-teams/">Former Members</a></li>
+          </ul>
+          <ul>
+            <li><a href="/contact/">Contact</a></li>
+            <li><a href="/students/">Students</a></li>
+            <li><a href="/non-profits/">Non-Profits</a></li>
+            <li><a href="/university/">College or University</a></li>
+          </ul>
+          <ul>
+            <a href="https://www.facebook.com/GlobalAppInitiative"><img src="/img/social/facebook-32.png"></img></a>
+            <a href="https://twitter.com/GlobalAppsBU"><img src="/img/social/twitter-32.png"></img></a>
+            <a href="https://medium.com/@GlobalAppsBU"><img src="/img/social/medium-32.png"></img></a>
+            <a href="https://www.linkedin.com/company/global-app-initiative"><img src="/img/social/linkedin-32.png"></img></a>
+            <a href="https://www.youtube.com/user/GlobalAppInitiative"><img src="/img/social/youtube-32.png"></img></a>
+            <a href="https://github.com/GlobalAppInitiative"><img src="/img/social/github-32.png"></img></a>
+          </ul>
         </ul>
-        <ul>
-          <li><a href="/projects/">Projects</a></li>
-          <li><a href="/projects/2013/">2013</a></li>
-          <li><a href="/projects/2014/">2014</a></li>
-        </ul>
-         <ul>
-          <li><a href="/education">Education</a></li>
-          <li><a href="/summer-leadership-program">Summer Leadership Program</a></li>
-          <li><a href="/job-board">Job Board</a></li>
-        </ul>
-        <ul>
-          <li><a href="/team">Team</a></li>
-          <li><a href="/team/current">Current EBoard</a></li>
-          <li><a href="/former-teams">Former Members</a></li>
-        </ul>
-        <ul>
-          <li><a href="/contact">Contact</a></li>
-          <li><a href="/students">Students</a></li>
-          <li><a href="/non-profits">Non-Profits</a></li>
-          <li><a href="/university">College or University</a></li>
-        </ul>
-        <ul>
-          <li>Social</li>
-          <li><a href="#">Facebook</a></li>
-          <li><a href="#">Twitter</a></li>
-          <li><a href="#">YouTube</a></li>
-          <li><a href="#">GitHub</a></li>
-          <li><a href="#">Google+</a></li>
-        </ul>
-      </ul>
+      </div>
+      <hr>
+      <div class="container">
+        <div style="width: 50%;float:left">
+          <p style="color:#B3B3B3">Global App Initiative, Boston University</p>
+        </div>
+        <div style="width: 50%;float:right">
+          <a href="http://www.bu.edu/policies/students/disclaimer/"><i style="float:right">Website Disclaimer</i></a>
+            <!-- <form class="navbar-form navbar-left" role="search">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Search">
+              </div>
+              <button type="submit" class="btn btn-default">Submit</button>
+            </form> -->
+        </div>
+      </div>
     </div>
-    <hr>
-    <div class="container">
-      <p style="color:#B3B3B3">Global App Initiative, Boston University</p>
-
-      <!-- if we can actually implement a search functionality -->
-      <ul class="nav navbar-nav navbar-right">
-        <li>
-          <form class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-          </form>
-        </li>
-      </ul>
-
-    </div>
-    <!-- 
-    <div class="container">
-      <div class="col-md-4">
-        <p class="white-text">Content for the first footer section.</p>
-      </div>
-      <div class="col-md-4">
-        <p class="white-text">Content for the second footer section.</p>
-      </div>
-      <div class="col-md-4">
-        <p class="white-text">Content for the third footer section.</p>
-      </div>
-      <div class="col-md-4">
-        <p class="white-text">Content for the fourth footer section.</p>
-      </div>
-      <div class="col-md-4">
-        <p class="white-text">Content for the fifth footer section.</p>
-      </div>
-      <div class="col-md-4">
-        <p class="white-text">Content for the sixth footer section.</p>
-      </div>
-      <div class="col-md-4">
-        <p class="white-text">Content for the seventh footer section.</p>
-      </div>
-    </div> -->
-
   </div>
+  <div class="extend"></div>
 </body>
 </html>
