--- a/index.html
+++ b/index.html
@@ -1,23 +1,15 @@
-<!DOCTYPE HTML>
-<!-- <link rel="icon" href="/img/favicon.png" type="image/x-icon" /> -->
-<html lang="en"> <!-- class="no-js" -->
+<!doctype HTML>
+<link rel="icon" href="/img/favicon.png" type="image/x-icon" />
+<html class="no-js" lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="">
-  <meta name="author" content="">
-
   <title> Global App Initiative</title>
-
-  <!-- Bootstrap -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-
-  <!-- Custom Global CSS -->
-  <!-- <link rel="stylesheet" href="css/global.css" /> -->
-
+  <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
+  
   <!-- Page CSS -->
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="/css/index.css"/>
+  <link rel="stylesheet" href="/css/global.css"/>
 
   <!-- Custom Fonts -->
   <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -25,54 +17,45 @@
   <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-
+  <!-- <script src="/js/bootstrap.min.js"/> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
-<body id="page-top" class="index">
-  <!-- Header, e.g. bootstrap version -->
-  <nav class="navbar navbar-default navbar-static-top">
-    <div class = "container">
-      
-      <div class="navbar-header page-scroll">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+<body>
+  
+  <!-- ############################################################ -->
+  <!-- Header -->
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <!-- <nav class="navbar navbar-default" role="navigation"> -->
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand page-scroll" href="#page-top">Global App Initiative</a>
+        <a class="logotopleft" href="/"><img src="/img/GAI_gif_white.gif"></a>
       </div>
-
-
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <li class="hidden">
-            <a href="#page-top"></a>
-          </li>
-          <li>
-            <a class="page-scroll" href="#services">Services</a>
-          </li>
-          <li>
-            <a class="page-scroll" href="#portfolio">Portfolio</a>
-          </li>
-          <li>
-            <a class="page-scroll" href="#about">About</a>
-          </li>
-          <li>
-            <a class="page-scroll" href="#team">Team</a>
-          </li>
-          <li>
-            <a class="page-scroll" href="#contact">Contact</a>
-          </li>
+        <ul class="nav navbar-nav">
+          <!-- <li class="nav-active"><a href="/about/">About</a></li> -->
+          <li><a href="/about/">About</a></li>
+          <li><a href="/projects/">Projects</a></li>
+          <li><a href="/education/">Education</a></li>
+          <li><a href="/events/">Events</a></li>
+          <li><a href="/contact/">Contact</a></li>
+          <li><a href="/join/">Join</a></li>
         </ul>
       </div>
-    </div>    
+    </div>
   </nav>
 
   <!-- Header -->
   <header>
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Welcome To Our Studio!</div>
+        <div class="intro-lead-in">Welcome To Global App Initiative!</div>
         <div class="intro-heading">It's Nice To Meet You</div>
         <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
       </div>
@@ -85,9 +68,67 @@
     <img src="/img/GAI_gif_blue_b.gif">
   </div>
 
-  <div>
-    Put things like the consistent footer here!
+   <!-- Site footer -->
+  <!-- <div class="navbar navbar-fixed-bottom"> -->
+  <div class="navbar">
+    <div class="footer">
+      <div class="container">
+        <ul class="footer-lists">
+          <ul>
+            <li class="footer-top"><a href="/about/">About</a></li>
+            <li><a href="https://medium.com/@GlobalAppsBU">Blog</a></li>
+            <li><a href="/sponsors/">Sponsors</a></li>
+            <li><a href="/press/">Press</a></li>
+          </ul>
+          <ul>
+            <li><a href="/projects/">Projects</a></li>
+            <li><a href="/projects/2013/">2013</a></li>
+            <li><a href="/projects/2014/">2014</a></li>
+            <li><a href="/projects/2015/">2015</a></li>
+          </ul>
+           <ul>
+            <li><a href="/education/">Education</a></li>
+            <li><a href="/summer-leadership-program/">Summer Leadership Program</a></li>
+            <li><a href="/job-board/">Job Board</a></li>
+          </ul>
+          <ul>
+            <li><a href="/team/">Team</a></li>
+            <li><a href="/team/current/">Current EBoard</a></li>
+            <li><a href="/team/former-teams/">Former Members</a></li>
+          </ul>
+          <ul>
+            <li><a href="/contact/">Contact</a></li>
+            <li><a href="/students/">Students</a></li>
+            <li><a href="/non-profits/">Non-Profits</a></li>
+            <li><a href="/university/">College or University</a></li>
+          </ul>
+          <ul>
+            <a href="https://www.facebook.com/GlobalAppInitiative"><img src="/img/social/facebook-32.png"></img></a>
+            <a href="https://twitter.com/GlobalAppsBU"><img src="/img/social/twitter-32.png"></img></a>
+            <a href="https://medium.com/@GlobalAppsBU"><img src="/img/social/medium-32.png"></img></a>
+            <a href="https://www.linkedin.com/company/global-app-initiative"><img src="/img/social/linkedin-32.png"></img></a>
+            <a href="https://www.youtube.com/user/GlobalAppInitiative"><img src="/img/social/youtube-32.png"></img></a>
+            <a href="https://github.com/GlobalAppInitiative"><img src="/img/social/github-32.png"></img></a>
+          </ul>
+        </ul>
+      </div>
+      <hr>
+      <div class="container">
+        <div style="width: 50%;float:left">
+          <p style="color:#B3B3B3">Global App Initiative, Boston University</p>
+        </div>
+        <div style="width: 50%;float:right">
+          <a href="http://www.bu.edu/policies/students/disclaimer/"><i style="float:right">Website Disclaimer</i></a>
+            <!-- <form class="navbar-form navbar-left" role="search">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Search">
+              </div>
+              <button type="submit" class="btn btn-default">Submit</button>
+            </form> -->
+        </div>
+      </div>
+    </div>
   </div>
-
+  <div class="extend"></div>
 </body>
 </html>
