--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+
   <!-- <script src="/js/bootstrap.min.js"/> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -27,19 +28,18 @@
   <!-- Header -->
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   <!-- <nav class="navbar navbar-default" role="navigation"> -->
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+    <div class="container">
+      <div class="navbar-header page-scroll">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="logotopleft" href="/"><img src="/img/GAI_gif_white.gif"></a>
+        <a class="brand-logo" href="/"><img src="/img/GAI_gif_white.gif"></a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <!-- <li class="nav-active"><a href="/about/">About</a></li> -->
+        <ul class="nav navbar-nav navbar-right">
           <li><a href="/about/">About</a></li>
           <li><a href="/projects/">Projects</a></li>
           <li><a href="/education/">Education</a></li>
