customized header for homepage

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype HTML>
+<!DOCTYPE HTML>
 <link rel="icon" href="/img/favicon.png" type="image/x-icon" />
 <html class="no-js" lang="en">
 <head>
@@ -13,10 +13,9 @@
 
   <!-- Custom Fonts -->
   <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href='http://fonts.googleapis.com/css?family=Roboto:300,700,400' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
 
   <!-- <script src="/js/bootstrap.min.js"/> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -55,9 +54,10 @@
   <header>
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Welcome To Global App Initiative!</div>
-        <div class="intro-heading">It's Nice To Meet You</div>
-        <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+        <div class="intro-heading">Global App Initiative</div>
+        <div class="intro-lead-in">Making the world a better
+        <br>place, one app at a time</div>
+        <a href="#services" class="page-scroll btn btn-xl">Join Our Club</a>
       </div>
     </div>
   </header>
