updated e-board image grid

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title> Global App Initiative</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/about.css">
+    <link rel="stylesheet" type="text/css" href="css/ihover.css">
 </head>
 <body>
     <div class="container-fluid about_body" id="mission">
@@ -47,54 +48,43 @@
         </p>
     </div>
     <div class="container">
-        <div class="row team">
+        <div class="col-sm-4 col-xs-6">
+            <div class="ih-item circle colored effect3 left_to_right"><a href="#">
+                <div class="img"><img src="img/e-board/veena.jpg" alt="img"></div>
+                <div class="info">
+                    <h3>Veena Dali</h3>
+                    <p>President</p>
+                </div></a></div>
+        </div>
+        <div class="row e-board">
             <div class="col-sm-4 col-xs-6">
-                <a href="#">
-                    <img src="http://placehold.it/200x200" class="thumbnail img-responsive">
-                </a>
+                <div class="ih-item circle colored effect3 left_to_right"><a href="#">
+                    <div class="img"><img src="img/e-board/kyle.jpg" alt="img"></div>
+                    <div class="info">
+                        <h3>Kyle Mann</h3>
+                        <p>VP of Operations</p>
+                    </div></a></div>
             </div>
             <div class="col-sm-4 col-xs-6">
-                <a href="#">
-                    <img src="http://placehold.it/200x200" class="thumbnail img-responsive">
-                </a>
+                <div class="ih-item circle colored effect3 left_to_right"><a href="#">
+                    <div class="img"><img src="img/e-board/an.png" alt="img"></div>
+                    <div class="info">
+                        <h3>An Nguyen</h3>
+                        <p>VP of Client Relations</p>
+                    </div></a></div>
             </div>
             <div class="col-sm-4 col-xs-6">
-                <a href="#">
-                    <img src="http://placehold.it/200x200" class="thumbnail img-responsive">
-                </a>
+                <div class="ih-item circle colored effect3 left_to_right"><a href="#">
+                    <div class="img"><img src="img/e-board/chris.jpg" alt="img"></div>
+                    <div class="info">
+                        <h3>Chris Yip</h3>
+                        <p>Secretary</p>
+                    </div></a></div>
             </div>
-            <div class="col-sm-4 col-xs-6">
-                <a href="#">
-                    <img src="http://placehold.it/200x200" class="thumbnail img-responsive">
-                </a>
-            </div>
-            <div class="col-sm-4 col-xs-6">
-                <a href="#">
-                    <img src="http://placehold.it/200x200" class="thumbnail img-responsive">
-                </a>
-            </div>
-            <div class="col-sm-4 col-xs-6">
-                <a href="#">
-                    <img src="http://placehold.it/200x200" class="thumbnail img-responsive">
-                </a>
-            </div>
-            <div class="col-sm-4 col-xs-6">
-                <a href="#">
-                    <img src="http://placehold.it/200x200" class="thumbnail img-responsive">
-                </a>
-            </div>
-            <div class="col-sm-4 col-xs-6">
-                <a href="#">
-                    <img src="http://placehold.it/200x200" class="thumbnail img-responsive">
-                </a>
-            </div>
-            <div class="col-sm-4 col-xs-6">
-                <a href="#">
-                    <img src="http://placehold.it/200x200" class="thumbnail img-responsive">
-                </a>
-            </div>
+
         </div>
     </div>
+
     <div class="footer">
         <!-- Footer code here-->
     </div>
