updated about page

--- a/about.html
+++ b/about.html
@@ -19,21 +19,23 @@
             environmentally sound world.
         </p>
     </div>
-    <div class="container-fluid" id="stats">
-        <ul>
-            <li>
-                <h1>300</h1>
-                <p>Students</p>
-            </li>
-            <li>
-                <h1>17</h1>
-                <p>Nonprofits</p>
-            </li>
-            <li>
-                <h1>4</h1>
-                <p>Published Apps</p>
-            </li>
-        </ul>
+    <div class="container-fluid stats-container">
+        <div class="col-sm-8 col-sm-offset-2" id="stats">
+            <ul>
+                <li>
+                    <h1>300</h1>
+                    <p>Students</p>
+                </li>
+                <li>
+                    <h1>17</h1>
+                    <p>Nonprofits</p>
+                </li>
+                <li>
+                    <h1>4</h1>
+                    <p>Published Apps</p>
+                </li>
+            </ul>
+        </div>
     </div>
     <div class="img-responsive" id="about_video">
         <img src="img/gai-video.jpg" alt="About GAI Video">
@@ -81,8 +83,16 @@
                         <p>Secretary</p>
                     </div></a></div>
             </div>
-
         </div>
+    </div>
+    <div class="container-fluid about_body">
+        <h2>Our E-Board</h2>
+        <p class="about_body_text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce luctus purus
+            vitae arcu venenatis sagittis. Vivamus justo sem, sollicitudin eget neque eget,
+            imperdiet molestie tortor. Quisque tristique iaculis nisl, ut blandit augue hendrerit
+            vitae. Pellentesque interdum nisl nibh, et varius.
+        </p>
     </div>
 
     <div class="footer">
