finished footer header, now for testing and confirming website structure

--- a/header-footer.html
+++ b/header-footer.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content=""/>
   <meta name="author" content=""/>
-  <title> Global App Initiative</title>
+  <title>Be sure to Change this Title - Global App Initiative </title>
+  <meta name="description" content="Global App Initiative - Be sure to change this tag."/>
   <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="/css/global.css" />
-  <!-- <script src="/js/bootstrap.min.js"/> -->
+  <link rel="stylesheet" href="/css/global.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
@@ -41,75 +41,81 @@
   </nav>
 
   <!-- main body-->
-
-  <div style="background-color:#FFFFFF">
+  <div class="body-container">
     <div class="container">
       Put things like the actual home page here!<br>Look, a rotating logo!<br>
       <img src="/img/GAI_gif_blue_b.gif">
     </div>
   </div>
 
-
   <!-- Site footer -->
   <div class="footer">
-    <div class="subscribe-bar">
-      <div class="container-fluid">
-        <form role="form">
-          <label for="email">Keep up to date</label>
-          <div class="form-group">
-            <input type="email" class="form-control" id="email">
-          </div>
-          <button type="submit" class="btn btn-default">Subscribe</button>
-        </form>
+    <div class="presub">
+      <div class="subscribe-bar">
+        <div>
+          <form role="form">
+            <label for="email">Keep up to date</label>
+            <div class="form-group">
+              <input type="email" class="form-control" id="email" placeholder="Enter your email">
+            </div>
+            <button type="submit" class="btn btn-default">Subscribe</button>
+          </form>
+        </div>
       </div>
     </div>
+    <div style="clear:both"></div>
     <div class="container-fluid">
       <ul class="footer-lists">
-        <ul>
-          <li>About</li>
-          <li><a href="/team/">Team</a></li>
-          <li><a href="https://medium.com/@GlobalAppsBU">Blog</a></li>
-          <li><a href="/press/">Press</a></li>
-        </ul>
-        <ul>
-          <li>Projects</li>
-          <li><a href="/projects/current/">Current</a></li>
-          <li><a href="/projects/past/">Past</a></li>
-          <li><a href="/projects/clients/">Clients</a></li>
-        </ul>
-         <ul>
-          <li>Resources</li>
-          <li><a href="/job-board/">Job Board</a></li>
-          <li><a href="/job-board/">Tutorials</a></li>
-          <li><a href="/job-board/">Newsletter</a></li>
-        </ul>
-        <ul>
-          <li>Get involved</li>
-          <li><a href="/students/">Students</a></li>
-          <li><a href="/non-profits/">Non-Profits</a></li>
-          <li><a href="/contact/partners/">Partners</a></li>
-        </ul>
-        <ul class="gray-social-ul">
-          <a href="https://www.facebook.com/GlobalAppInitiative"><img src="/img/social/facebook-32.png"></img></a>
-          <a href="https://twitter.com/GlobalAppsBU"><img src="/img/social/twitter-32.png"></img></a>
-          <a href="https://instagram.com/globalappinitiative/"><img src="/img/social/instagram-32.jpg"></img></a>
-          <br>
-          <a href="https://www.linkedin.com/company/global-app-initiative"><img src="/img/social/linkedin-32.png"></img></a>
-          <a href="https://www.youtube.com/user/GlobalAppInitiative"><img src="/img/social/youtube-32.png"></img></a>
-          <a href="https://github.com/GlobalAppInitiative"><img src="/img/social/github-32.png"></img></a>
-        </ul>
+        <li>About</li>
+        <li><a href="/team/">Team</a></li>
+        <li><a href="https://medium.com/@GlobalAppsBU">Blog</a></li>
+        <li><a href="/press/">Press</a></li>
+      </ul>
+      <ul class="footer-lists">
+        <li>Projects</li>
+        <li><a href="/projects/current/">Current</a></li>
+        <li><a href="/projects/past/">Past</a></li>
+        <li><a href="/projects/clients/">Clients</a></li>
+      </ul>
+      <ul class="footer-lists">
+        <li>Resources</li>
+        <li><a href="/job-board/">Job Board</a></li>
+        <li><a href="/education/tutorials/">Tutorials</a></li>
+        <li><a href="/newsletter/">Newsletter</a></li>
+      </ul>
+      <ul class="footer-lists">
+        <li>Get involved</li>
+        <li><a href="/contact/students/">Students</a></li>
+        <li><a href="/contact/non-profits/">Non-Profits</a></li>
+        <li><a href="/partners/">Partners</a></li>
+      </ul>
+      <ul class="footer-lists gray-social-ul">
+        <a href="https://www.facebook.com/GlobalAppInitiative"><img src="/img/social/facebook-32.png"></img></a>
+        <a href="https://twitter.com/GlobalAppsBU"><img src="/img/social/twitter-32.png"></img></a>
+        <a href="https://instagram.com/globalappinitiative/"><img src="/img/social/instagram-32.jpg"></img></a>
+        <br>
+        <a href="https://www.linkedin.com/company/global-app-initiative"><img src="/img/social/linkedin-32.png"></img></a>
+        <a href="https://www.youtube.com/user/GlobalAppInitiative"><img src="/img/social/youtube-32.png"></img></a>
+        <a href="https://github.com/GlobalAppInitiative"><img src="/img/social/github-32.png"></img></a>
       </ul>
     </div>
+    <ul class="mobile-social">
+      <a href="https://www.facebook.com/GlobalAppInitiative"><img src="/img/social/facebook-32.png"></img></a>
+      <a href="https://twitter.com/GlobalAppsBU"><img src="/img/social/twitter-32.png"></img></a>
+      <a href="https://instagram.com/globalappinitiative/"><img src="/img/social/instagram-32.jpg"></img></a>
+      <a href="https://www.linkedin.com/company/global-app-initiative"><img src="/img/social/linkedin-32.png"></img></a>
+      <a href="https://www.youtube.com/user/GlobalAppInitiative"><img src="/img/social/youtube-32.png"></img></a>
+      <a href="https://github.com/GlobalAppInitiative"><img src="/img/social/github-32.png"></img></a>
+    </ul>
     <hr>
     <div class="container-fluid" style="padding-bottom:20px">
        <div class="footer-corner">
-        <a href="/">home</a>  -  <a href="/sitemap"/>sitemap</a><br>Global App Initiative, Boston University
+        <a href="/">home</a>  -  <a href="/sitemap/"/>sitemap</a><br>Global App Initiative, Boston University
       </div>
       <div class="footer-corner">
         <a href="http://www.bu.edu/policies/students/disclaimer/"><i style="float:right">Website Disclaimer</i></a>
       </div>
     </div>
   </div>
-  <!-- <div class="extend"></div> -->
 </body>
 </html>
