--- a/index.html
+++ b/index.html
@@ -1,54 +1,51 @@
-<!DOCTYPE HTML>
+<!doctype HTML>
 <link rel="icon" href="/img/favicon.png" type="image/x-icon" />
 <html class="no-js" lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content=""/>
+  <meta name="author" content=""/>
   <title> Global App Initiative</title>
   <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
-  
-  <!-- Page CSS -->
+  <link rel="stylesheet" href="/css/global.css" />
   <link rel="stylesheet" href="/css/index.css"/>
-  <link rel="stylesheet" href="/css/global.css"/>
-
-  <!-- Custom Fonts -->
-  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <!-- <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=Roboto:300,700,400' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-  <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-
+  <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'> -->
   <!-- <script src="/js/bootstrap.min.js"/> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
   
-  <!-- ############################################################ -->
   <!-- Header -->
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-  <!-- <nav class="navbar navbar-default" role="navigation"> -->
-    <div class="container">
-      <div class="navbar-header page-scroll">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="brand-logo" href="/"><img src="/img/GAI_gif_white.gif"></a>
+        <a href="/"><img height="48px" src="/img/GAI-logo-white-extra-small.png" class="logotopleft"></a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav">
           <li><a href="/about/">About</a></li>
           <li><a href="/projects/">Projects</a></li>
           <li><a href="/education/">Education</a></li>
           <li><a href="/events/">Events</a></li>
           <li><a href="/contact/">Contact</a></li>
-          <li><a href="/join/">Join</a></li>
         </ul>
       </div>
     </div>
   </nav>
+
+  <!-- main body-->
+  <div class="body-container"></div>
 
   <!-- Header -->
   <header>
@@ -62,73 +59,75 @@
     </div>
   </header>
 
-  <!-- main body-->
-  <div>
-    Put things like the actual home page here!<br>Look, a rotating logo!<br>
-    <img src="/img/GAI_gif_blue_b.gif">
-  </div>
-
-   <!-- Site footer -->
-  <!-- <div class="navbar navbar-fixed-bottom"> -->
-  <div class="navbar">
-    <div class="footer">
-      <div class="container">
-        <ul class="footer-lists">
-          <ul>
-            <li class="footer-top"><a href="/about/">About</a></li>
-            <li><a href="https://medium.com/@GlobalAppsBU">Blog</a></li>
-            <li><a href="/sponsors/">Sponsors</a></li>
-            <li><a href="/press/">Press</a></li>
-          </ul>
-          <ul>
-            <li><a href="/projects/">Projects</a></li>
-            <li><a href="/projects/2013/">2013</a></li>
-            <li><a href="/projects/2014/">2014</a></li>
-            <li><a href="/projects/2015/">2015</a></li>
-          </ul>
-           <ul>
-            <li><a href="/education/">Education</a></li>
-            <li><a href="/summer-leadership-program/">Summer Leadership Program</a></li>
-            <li><a href="/job-board/">Job Board</a></li>
-          </ul>
-          <ul>
-            <li><a href="/team/">Team</a></li>
-            <li><a href="/team/current/">Current EBoard</a></li>
-            <li><a href="/team/former-teams/">Former Members</a></li>
-          </ul>
-          <ul>
-            <li><a href="/contact/">Contact</a></li>
-            <li><a href="/students/">Students</a></li>
-            <li><a href="/non-profits/">Non-Profits</a></li>
-            <li><a href="/university/">College or University</a></li>
-          </ul>
-          <ul>
-            <a href="https://www.facebook.com/GlobalAppInitiative"><img src="/img/social/facebook-32.png"></img></a>
-            <a href="https://twitter.com/GlobalAppsBU"><img src="/img/social/twitter-32.png"></img></a>
-            <a href="https://medium.com/@GlobalAppsBU"><img src="/img/social/medium-32.png"></img></a>
-            <a href="https://www.linkedin.com/company/global-app-initiative"><img src="/img/social/linkedin-32.png"></img></a>
-            <a href="https://www.youtube.com/user/GlobalAppInitiative"><img src="/img/social/youtube-32.png"></img></a>
-            <a href="https://github.com/GlobalAppInitiative"><img src="/img/social/github-32.png"></img></a>
-          </ul>
-        </ul>
-      </div>
-      <hr>
-      <div class="container">
-        <div style="width: 50%;float:left">
-          <p style="color:#B3B3B3">Global App Initiative, Boston University</p>
-        </div>
-        <div style="width: 50%;float:right">
-          <a href="http://www.bu.edu/policies/students/disclaimer/"><i style="float:right">Website Disclaimer</i></a>
-            <!-- <form class="navbar-form navbar-left" role="search">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search">
-              </div>
-              <button type="submit" class="btn btn-default">Submit</button>
-            </form> -->
+  <!-- Site footer -->
+  <div class="footer">
+    <div class="presub">
+      <div class="subscribe-bar">
+        <div>
+          <form role="form">
+            <label for="email">Keep up to date</label>
+            <div class="form-group">
+              <input type="email" class="form-control" id="email" placeholder="Enter your email">
+            </div>
+            <button type="submit" class="btn btn-default">Subscribe</button>
+          </form>
         </div>
       </div>
     </div>
+    <div style="clear:both"></div>
+    <div class="container-fluid">
+      <ul class="footer-lists">
+        <li>About</li>
+        <li><a href="/team/">Team</a></li>
+        <li><a href="https://medium.com/@GlobalAppsBU">Blog</a></li>
+        <li><a href="/press/">Press</a></li>
+      </ul>
+      <ul class="footer-lists">
+        <li>Projects</li>
+        <li><a href="/projects/current/">Current</a></li>
+        <li><a href="/projects/past/">Past</a></li>
+        <li><a href="/projects/clients/">Clients</a></li>
+      </ul>
+      <ul class="footer-lists">
+        <li>Resources</li>
+        <li><a href="/job-board/">Job Board</a></li>
+        <li><a href="/education/tutorials/">Tutorials</a></li>
+        <li><a href="/newsletter/">Newsletter</a></li>
+      </ul>
+      <ul class="footer-lists">
+        <li>Get involved</li>
+        <li><a href="/contact/students/">Students</a></li>
+        <li><a href="/contact/non-profits/">Non-Profits</a></li>
+        <li><a href="/partners/">Partners</a></li>
+      </ul>
+      <ul class="footer-lists gray-social-ul">
+        <a href="https://www.facebook.com/GlobalAppInitiative"><img src="/img/social/facebook-32.png"></img></a>
+        <a href="https://twitter.com/GlobalAppsBU"><img src="/img/social/twitter-32.png"></img></a>
+        <a href="https://instagram.com/globalappinitiative/"><img src="/img/social/instagram-32.jpg"></img></a>
+        <br>
+        <a href="https://www.linkedin.com/company/global-app-initiative"><img src="/img/social/linkedin-32.png"></img></a>
+        <a href="https://www.youtube.com/user/GlobalAppInitiative"><img src="/img/social/youtube-32.png"></img></a>
+        <a href="https://github.com/GlobalAppInitiative"><img src="/img/social/github-32.png"></img></a>
+      </ul>
+    </div>
+    <ul class="mobile-social">
+      <a href="https://www.facebook.com/GlobalAppInitiative"><img src="/img/social/facebook-32.png"></img></a>
+      <a href="https://twitter.com/GlobalAppsBU"><img src="/img/social/twitter-32.png"></img></a>
+      <a href="https://instagram.com/globalappinitiative/"><img src="/img/social/instagram-32.jpg"></img></a>
+      <a href="https://www.linkedin.com/company/global-app-initiative"><img src="/img/social/linkedin-32.png"></img></a>
+      <a href="https://www.youtube.com/user/GlobalAppInitiative"><img src="/img/social/youtube-32.png"></img></a>
+      <a href="https://github.com/GlobalAppInitiative"><img src="/img/social/github-32.png"></img></a>
+    </ul>
+    <hr>
+    <div class="container-fluid" style="padding-bottom:20px">
+       <div class="footer-corner">
+        <a href="/">home</a>  -  <a href="/sitemap/"/>sitemap</a><br>Global App Initiative, Boston University
+      </div>
+      <div class="footer-corner">
+        <a href="http://www.bu.edu/policies/students/disclaimer/"><i style="float:right">Website Disclaimer</i></a>
+      </div>
+    </div>
   </div>
-  <div class="extend"></div>
+  <!-- <div class="extend"></div> -->
 </body>
 </html>
