--- a/about/index.html
+++ b/about/index.html
@@ -4,11 +4,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> Global App Initiative</title>
+  <meta name="description" content=""/>
+  <meta name="author" content=""/>
+  <title>Be sure to Change this Title - Global App Initiative </title>
+  <meta name="description" content="Global App Initiative - Be sure to change this tag."/>
   <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
+
+  <link rel="stylesheet" href="/css/global.css"/>
   <link rel="stylesheet" type="text/css" href="/css/about.css"/>
-  <link rel="stylesheet" href="/css/global.css" />
-  <!-- <script src="/js/bootstrap.min.js"/> -->
+  <link rel="stylesheet" type="text/css" href="/css/ihover.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
@@ -17,7 +21,6 @@
   <!-- ############################################################ -->
   <!-- Header -->
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-  <!-- <nav class="navbar navbar-default" role="navigation"> -->
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -26,24 +29,22 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="logotopleft" href="/"><img src="/img/GAI_gif_white.gif"></a>
+        <a href="/"><img height="48px" src="/img/GAI-logo-white-extra-small.png" class="logotopleft"></a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <!-- <li class="nav-active"><a href="/about/">About</a></li> -->
           <li><a href="/about/">About</a></li>
           <li><a href="/projects/">Projects</a></li>
           <li><a href="/education/">Education</a></li>
           <li><a href="/events/">Events</a></li>
           <li><a href="/contact/">Contact</a></li>
-          <li><a href="/join/">Join</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-
-  <!-- MAIN BODY OF PAGE -->
+<!-- main body-->
+  <div class="body-container">
     <div class="container-fluid about_body" id="mission">
         <h2>Our Mission</h2>
         <p class="about_body_text" id="mission-text">
@@ -54,24 +55,26 @@
             environmentally sound world.
         </p>
     </div>
-    <div class="container-fluid" id="stats">
-        <ul>
-            <li>
-                <h1>300</h1>
-                <p>Students</p>
-            </li>
-            <li>
-                <h1>17</h1>
-                <p>Nonprofits</p>
-            </li>
-            <li>
-                <h1>4</h1>
-                <p>Published Apps</p>
-            </li>
-        </ul>
+    <div class="container-fluid stats-container">
+        <div class="col-sm-8 col-sm-offset-2" id="stats">
+            <ul>
+                <li>
+                    <h1>300</h1>
+                    <p>Students</p>
+                </li>
+                <li>
+                    <h1>17</h1>
+                    <p>Nonprofits</p>
+                </li>
+                <li>
+                    <h1>4</h1>
+                    <p>Published Apps</p>
+                </li>
+            </ul>
+        </div>
     </div>
-    <div class="/img-responsive" id="about_video">
-        <img src="/img/gai-video.jpg" alt="About GAI Video">
+    <div class="background">
+        <img src="/img/gai-video.jpg" class="stretch" alt="About GAI Video">
     </div>
     <div class="container-fluid about_body">
         <h2>Our E-Board</h2>
@@ -82,68 +85,123 @@
             vitae. Pellentesque interdum nisl nibh, et varius.
         </p>
     </div>
-
-
-<!-- Site footer -->
-  <div class="navbar">
-    <div class="footer">
-      <div class="container">
-        <ul class="footer-lists">
-          <ul>
-            <li class="footer-top"><a href="/about/">About</a></li>
-            <li><a href="https://medium.com/@GlobalAppsBU">Blog</a></li>
-            <li><a href="/sponsors/">Sponsors</a></li>
-            <li><a href="/press/">Press</a></li>
-          </ul>
-          <ul>
-            <li><a href="/projects/">Projects</a></li>
-            <li><a href="/projects/2013/">2013</a></li>
-            <li><a href="/projects/2014/">2014</a></li>
-            <li><a href="/projects/2015/">2015</a></li>
-          </ul>
-           <ul>
-            <li><a href="/education/">Education</a></li>
-            <li><a href="/summer-leadership-program/">Summer Leadership Program</a></li>
-            <li><a href="/job-board/">Job Board</a></li>
-          </ul>
-          <ul>
-            <li><a href="/team/">Team</a></li>
-            <li><a href="/team/current/">Current EBoard</a></li>
-            <li><a href="/former-teams/">Former Members</a></li>
-          </ul>
-          <ul>
-            <li><a href="/contact/">Contact</a></li>
-            <li><a href="/students/">Students</a></li>
-            <li><a href="/non-profits/">Non-Profits</a></li>
-            <li><a href="/university/">College or University</a></li>
-          </ul>
-          <ul>
-            <a href="https://www.facebook.com/GlobalAppInitiative"><img src="/img/social/facebook-32.png"></img></a>
-            <a href="https://twitter.com/GlobalAppsBU"><img src="/img/social/twitter-32.png"></img></a>
-            <a href="https://medium.com/@GlobalAppsBU"><img src="/img/social/medium-32.png"></img></a>
-            <a href="https://www.linkedin.com/company/global-app-initiative"><img src="/img/social/linkedin-32.png"></img></a>
-            <a href="https://www.youtube.com/user/GlobalAppInitiative"><img src="/img/social/youtube-32.png"></img></a>
-            <a href="https://github.com/GlobalAppInitiative"><img src="/img/social/github-32.png"></img></a>
-          </ul>
-        </ul>
-      </div>
-      <hr>
-      <div class="container">
-        <div style="width: 50%;float:left">
-          <p style="color:#B3B3B3">Global App Initiative, Boston University</p>
+    <div class="container">
+        <div class="col-sm-4 col-xs-6">
+            <div class="ih-item circle colored effect3 left_to_right"><a href="#">
+                <div class="img"><img src="/img/e-board/veena.jpg" alt="Veena Dali"></div>
+                <div class="info">
+                    <h3>Veena Dali</h3>
+                    <p>President</p>
+                </div></a></div>
         </div>
-        <div style="width: 50%;float:right">
-          <a href="http://www.bu.edu/policies/students/disclaimer/"><i style="float:right">Website Disclaimer</i></a>
-            <!-- <form class="navbar-form navbar-left" role="search">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search">
-              </div>
-              <button type="submit" class="btn btn-default">Submit</button>
-            </form> -->
+        <div class="row e-board">
+            <div class="col-sm-4 col-xs-6">
+                <div class="ih-item circle colored effect3 left_to_right"><a href="#">
+                    <div class="img"><img src="/img/e-board/kyle.jpg" alt="Kyle Mann"></div>
+                    <div class="info">
+                        <h3>Kyle Mann</h3>
+                        <p>VP of Operations</p>
+                    </div></a></div>
+            </div>
+            <div class="col-sm-4 col-xs-6">
+                <div class="ih-item circle colored effect3 left_to_right"><a href="#">
+                    <div class="img"><img src="/img/e-board/an.png" alt="An Nguyen"></div>
+                    <div class="info">
+                        <h3>An Nguyen</h3>
+                        <p>VP of Client Relations</p>
+                    </div></a></div>
+            </div>
+            <div class="col-sm-4 col-xs-6">
+                <div class="ih-item circle colored effect3 left_to_right"><a href="#">
+                    <div class="img"><img src="/img/e-board/chris.jpg" alt="Chris Yip"></div>
+                    <div class="info">
+                        <h3>Chris Yip</h3>
+                        <p>Secretary</p>
+                    </div></a></div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid about_body">
+        <h2>Our E-Board</h2>
+        <p class="about_body_text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce luctus purus
+            vitae arcu venenatis sagittis. Vivamus justo sem, sollicitudin eget neque eget,
+            imperdiet molestie tortor. Quisque tristique iaculis nisl, ut blandit augue hendrerit
+            vitae. Pellentesque interdum nisl nibh, et varius.
+        </p>
+    </div>
+  </div>
+ 
+
+  <!-- Site footer -->
+  <div class="footer">
+    <div class="presub">
+      <div class="subscribe-bar">
+        <div>
+          <form role="form">
+            <label for="email">Keep up to date</label>
+            <div class="form-group">
+              <input type="email" class="form-control" id="email" placeholder="Enter your email">
+            </div>
+            <button type="submit" class="btn btn-default">Subscribe</button>
+          </form>
         </div>
       </div>
     </div>
+    <div style="clear:both"></div>
+    <div class="container-fluid">
+      <ul class="footer-lists">
+        <li>About</li>
+        <li><a href="/team/">Team</a></li>
+        <li><a href="https://medium.com/@GlobalAppsBU">Blog</a></li>
+        <li><a href="/press/">Press</a></li>
+      </ul>
+      <ul class="footer-lists">
+        <li>Projects</li>
+        <li><a href="/projects/current/">Current</a></li>
+        <li><a href="/projects/past/">Past</a></li>
+        <li><a href="/projects/clients/">Clients</a></li>
+      </ul>
+      <ul class="footer-lists">
+        <li>Resources</li>
+        <li><a href="/job-board/">Job Board</a></li>
+        <li><a href="/education/tutorials/">Tutorials</a></li>
+        <li><a href="/newsletter/">Newsletter</a></li>
+      </ul>
+      <ul class="footer-lists">
+        <li>Get involved</li>
+        <li><a href="/contact/students/">Students</a></li>
+        <li><a href="/contact/non-profits/">Non-Profits</a></li>
+        <li><a href="/partners/">Partners</a></li>
+      </ul>
+      <ul class="footer-lists gray-social-ul">
+        <a href="https://www.facebook.com/GlobalAppInitiative"><img src="/img/social/facebook-32.png"></img></a>
+        <a href="https://twitter.com/GlobalAppsBU"><img src="/img/social/twitter-32.png"></img></a>
+        <a href="https://instagram.com/globalappinitiative/"><img src="/img/social/instagram-32.jpg"></img></a>
+        <br>
+        <a href="https://www.linkedin.com/company/global-app-initiative"><img src="/img/social/linkedin-32.png"></img></a>
+        <a href="https://www.youtube.com/user/GlobalAppInitiative"><img src="/img/social/youtube-32.png"></img></a>
+        <a href="https://github.com/GlobalAppInitiative"><img src="/img/social/github-32.png"></img></a>
+      </ul>
+    </div>
+    <ul class="mobile-social">
+      <a href="https://www.facebook.com/GlobalAppInitiative"><img src="/img/social/facebook-32.png"></img></a>
+      <a href="https://twitter.com/GlobalAppsBU"><img src="/img/social/twitter-32.png"></img></a>
+      <a href="https://instagram.com/globalappinitiative/"><img src="/img/social/instagram-32.jpg"></img></a>
+      <a href="https://www.linkedin.com/company/global-app-initiative"><img src="/img/social/linkedin-32.png"></img></a>
+      <a href="https://www.youtube.com/user/GlobalAppInitiative"><img src="/img/social/youtube-32.png"></img></a>
+      <a href="https://github.com/GlobalAppInitiative"><img src="/img/social/github-32.png"></img></a>
+    </ul>
+    <hr>
+    <div class="container-fluid" style="padding-bottom:20px">
+       <div class="footer-corner">
+        <a href="/">home</a>  -  <a href="/sitemap/"/>sitemap</a><br>Global App Initiative, Boston University
+      </div>
+      <div class="footer-corner">
+        <a href="http://www.bu.edu/policies/students/disclaimer/"><i style="float:right">Website Disclaimer</i></a>
+      </div>
+    </div>
   </div>
-  <div class="extend"></div>
+  <!-- <div class="extend"></div> -->
 </body>
 </html>
