updated to external links

--- a/about/index.html
+++ b/about/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content=""/>
   <meta name="author" content=""/>
-  <title>Be sure to Change this Title - Global App Initiative </title>
-  <meta name="description" content="Global App Initiative - Be sure to change this tag."/>
+  <title>About Global App Initiative </title>
+  <meta name="description" content="Global App Initiative - About us."/>
   <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
 
   <link rel="stylesheet" href="/css/global.css"/>
@@ -43,7 +43,7 @@
     </div>
   </nav>
 
-<!-- main body-->
+<body>
   <div class="body-container">
     <div class="container-fluid about_body" id="mission">
         <h2>Our Mission</h2>
@@ -87,37 +87,104 @@
     </div>
     <div class="container">
         <div class="col-sm-4 col-xs-6">
-            <div class="ih-item circle colored effect3 left_to_right"><a href="#">
+            <div class="ih-item circle colored effect3 left_to_right">
+                <a href="#">
                 <div class="img"><img src="/img/e-board/veena.jpg" alt="Veena Dali"></div>
                 <div class="info">
                     <h3>Veena Dali</h3>
                     <p>President</p>
-                </div></a></div>
+                </div>
+                </a>
+            </div>
         </div>
         <div class="row e-board">
             <div class="col-sm-4 col-xs-6">
-                <div class="ih-item circle colored effect3 left_to_right"><a href="#">
+                <div class="ih-item circle colored effect3 left_to_right">
+                    <a href="#">
                     <div class="img"><img src="/img/e-board/kyle.jpg" alt="Kyle Mann"></div>
                     <div class="info">
                         <h3>Kyle Mann</h3>
                         <p>VP of Operations</p>
-                    </div></a></div>
+                    </div>
+                    </a>
+                </div>
             </div>
             <div class="col-sm-4 col-xs-6">
-                <div class="ih-item circle colored effect3 left_to_right"><a href="#">
+                <div class="ih-item circle colored effect3 left_to_right">
+                    <a href="#">
                     <div class="img"><img src="/img/e-board/an.png" alt="An Nguyen"></div>
                     <div class="info">
                         <h3>An Nguyen</h3>
                         <p>VP of Client Relations</p>
-                    </div></a></div>
+                    </div>
+                    </a>
+                </div>
             </div>
             <div class="col-sm-4 col-xs-6">
-                <div class="ih-item circle colored effect3 left_to_right"><a href="#">
+                <div class="ih-item circle colored effect3 left_to_right">
+                    <a href="#">
+                        <div class="img"><img src="/img/e-board/olivia.jpg" alt="Olivia Deng"></div>
+                        <div class="info">
+                            <h3>Olivia DEng</h3>
+                            <p>Treasurer</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6">
+                <div class="ih-item circle colored effect3 left_to_right">
+                    <a href="#">
                     <div class="img"><img src="/img/e-board/chris.jpg" alt="Chris Yip"></div>
                     <div class="info">
                         <h3>Chris Yip</h3>
                         <p>Secretary</p>
-                    </div></a></div>
+                    </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6">
+                <div class="ih-item circle colored effect3 left_to_right">
+                    <a href="#">
+                        <div class="img"><img src="/img/e-board/robin.jpeg" alt="Robin Liu"></div>
+                        <div class="info">
+                            <h3>Robin Liu</h3>
+                            <p>Director of Marketing</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6">
+                <div class="ih-item circle colored effect3 left_to_right">
+                    <a href="#">
+                        <div class="img"><img src="/img/e-board/chi.JPG" alt="Chi Zhang"></div>
+                        <div class="info">
+                            <h3>Chi Zhang</h3>
+                            <p>Director of Business Development</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6">
+                <div class="ih-item circle colored effect3 left_to_right">
+                    <a href="#">
+                        <div class="img"><img src="/img/e-board/alexandra.png" alt="Alexandra Miller-Browne"></div>
+                        <div class="info">
+                            <h3>Alexandra Miller-Browne</h3>
+                            <p>Director of ...</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6">
+                <div class="ih-item circle colored effect3 left_to_right">
+                    <a href="#">
+                        <div class="img"><img src="/img/e-board/Leen.jpg" alt="Leen AlShenibr"></div>
+                        <div class="info">
+                            <h3>Leen AlShenibr</h3>
+                            <p>Director of Education</p>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
@@ -131,7 +198,6 @@
         </p>
     </div>
   </div>
- 
 
   <!-- Site footer -->
   <div class="footer">
@@ -153,7 +219,7 @@
       <ul class="footer-lists">
         <li>About</li>
         <li><a href="/team/">Team</a></li>
-        <li><a href="https://medium.com/@GlobalAppsBU">Blog</a></li>
+        <li><a href="https://medium.com/@GlobalAppsBU" target="_blank">Blog</a></li>
         <li><a href="/press/">Press</a></li>
       </ul>
       <ul class="footer-lists">
@@ -175,22 +241,22 @@
         <li><a href="/partners/">Partners</a></li>
       </ul>
       <ul class="footer-lists gray-social-ul">
-        <a href="https://www.facebook.com/GlobalAppInitiative"><img src="/img/social/facebook-32.png"></img></a>
-        <a href="https://twitter.com/GlobalAppsBU"><img src="/img/social/twitter-32.png"></img></a>
-        <a href="https://instagram.com/globalappinitiative/"><img src="/img/social/instagram-32.jpg"></img></a>
+        <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="/img/social/facebook-32.png"></img></a>
+        <a href="https://twitter.com/GlobalAppsBU" target="_blank"><img src="/img/social/twitter-32.png"></img></a>
+        <a href="https://instagram.com/globalappinitiative/" target="_blank"><img src="/img/social/instagram-32.jpg"></img></a>
         <br>
-        <a href="https://www.linkedin.com/company/global-app-initiative"><img src="/img/social/linkedin-32.png"></img></a>
-        <a href="https://www.youtube.com/user/GlobalAppInitiative"><img src="/img/social/youtube-32.png"></img></a>
-        <a href="https://github.com/GlobalAppInitiative"><img src="/img/social/github-32.png"></img></a>
+        <a href="https://www.linkedin.com/company/global-app-initiative" target="_blank"><img src="/img/social/linkedin-32.png"></img></a>
+        <a href="https://www.youtube.com/user/GlobalAppInitiative" target="_blank"><img src="/img/social/youtube-32.png"></img></a>
+        <a href="https://github.com/GlobalAppInitiative" target="_blank"><img src="/img/social/github-32.png"></img></a>
       </ul>
     </div>
     <ul class="mobile-social">
-      <a href="https://www.facebook.com/GlobalAppInitiative"><img src="/img/social/facebook-32.png"></img></a>
-      <a href="https://twitter.com/GlobalAppsBU"><img src="/img/social/twitter-32.png"></img></a>
-      <a href="https://instagram.com/globalappinitiative/"><img src="/img/social/instagram-32.jpg"></img></a>
-      <a href="https://www.linkedin.com/company/global-app-initiative"><img src="/img/social/linkedin-32.png"></img></a>
-      <a href="https://www.youtube.com/user/GlobalAppInitiative"><img src="/img/social/youtube-32.png"></img></a>
-      <a href="https://github.com/GlobalAppInitiative"><img src="/img/social/github-32.png"></img></a>
+      <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="/img/social/facebook-32.png"></img></a>
+      <a href="https://twitter.com/GlobalAppsBU" target="_blank"><img src="/img/social/twitter-32.png"></img></a>
+      <a href="https://instagram.com/globalappinitiative/" target="_blank"><img src="/img/social/instagram-32.jpg"></img></a>
+      <a href="https://www.linkedin.com/company/global-app-initiative" target="_blank"><img src="/img/social/linkedin-32.png"></img></a>
+      <a href="https://www.youtube.com/user/GlobalAppInitiative" target="_blank"><img src="/img/social/youtube-32.png"></img></a>
+      <a href="https://github.com/GlobalAppInitiative" target="_blank"><img src="/img/social/github-32.png"></img></a>
     </ul>
     <hr>
     <div class="container-fluid" style="padding-bottom:20px">
@@ -198,10 +264,9 @@
         <a href="/">home</a>  -  <a href="/sitemap/"/>sitemap</a><br>Global App Initiative, Boston University
       </div>
       <div class="footer-corner">
-        <a href="http://www.bu.edu/policies/students/disclaimer/"><i style="float:right">Website Disclaimer</i></a>
+        <a href="http://www.bu.edu/policies/students/disclaimer/" target="_blank"><i style="float:right">Website Disclaimer</i></a>
       </div>
     </div>
   </div>
-  <!-- <div class="extend"></div> -->
 </body>
 </html>
