fixed An's name

--- a/about/index.html
+++ b/about/index.html
@@ -112,7 +112,7 @@
             <div class="col-sm-4 col-xs-6">
                 <div class="ih-item circle colored effect3 left_to_right">
                     <a href="#">
-                    <div class="img"><img src="/img/e-board/an.png" alt="An Nguyen"></div>
+                    <div class="img"><img src="/img/e-board/An.png" alt="An Nguyen"></div>
                     <div class="info">
                         <h3>An Nguyen</h3>
                         <p>VP of Client Relations</p>
